src2/objects/TelemetryTask__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Tasks (Account)</relationshipLabel>
        <relationshipName>Tasks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ActionStatus__c</fullName>
        <label>Action Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>TelemetryTask_ActionStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>AssetChassis__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset Chassis</label>
        <referenceTo>Asset</referenceTo>
        <relationshipName>Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AssetModule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset Module</label>
        <referenceTo>Asset</referenceTo>
        <relationshipName>TelemetryTask_Module</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AssignedTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContractLineItemChassisMirror__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Line Item Chassis</label>
        <referenceTo>ContractLineItemMirror__c</referenceTo>
        <relationshipLabel>Tasks (Contract Line Item Mirror Chassis)</relationshipLabel>
        <relationshipName>Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContractLineItemModuleMirror__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Line Item Module</label>
        <referenceTo>ContractLineItemMirror__c</referenceTo>
        <relationshipLabel>Tasks (Contract Line Item Module Mirror)</relationshipLabel>
        <relationshipName>Tasks1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Line_Item_Module__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Line Item Module</label>
        <referenceTo>ContractLineItem</referenceTo>
        <relationshipName>Tasks1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Module_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Module Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Tasks (Module Account)</relationshipLabel>
        <relationshipName>Module_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NES_ContractLineItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Line Item Chassis</label>
        <referenceTo>ContractLineItem</referenceTo>
        <relationshipName>Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NotableEvent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Notable Event</label>
        <referenceTo>NES_NotableEvent__c</referenceTo>
        <relationshipName>TelemetryTasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>TelemetryTask_Priority</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SmsMessageId__c</fullName>
        <label>Sms Message Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>TelemetryTask_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>TelemetryTask_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>UUI__c</fullName>
        <label>UUI</label>
        <length>96</length>
        <type>Text</type>
    </fields>
    <label>Telemetry Task</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Subject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>